# axum_l10n

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  fluent.rs  language_identifier.rs  lib.rs  tera.rs
test_data/: main.ftl  sub.ftl
