[package]
name = "tower_l18n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = { version = "0.16.0", optional = true }
http = "1.0.0"
serde = { version = "1.0.193", optional = true }
tera = { version = "1.19.1", optional = true }
tower = "0.4.13"
unic-langid = { version = "0.9.4", features = ["serde", "unic-langid-macros"] }
