[package]
name = "axum_l10n"
version = "0.3.1"
edition = "2021"
authors = ["tronicboy1"]
description = "A crate with localization utilities for Axum"
repository = "https://github.com/tronicboy1/axum_l10n"
license = "MIT OR Apache-2.0"
keywords = ["axum", "localization", "i18n", "l10n"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tera = ["fluent", "dep:tera", "serde", "serde_json"]
fluent = ["dep:fluent", "intl-memoizer"]

[dependencies]
axum = { version = "0.8", default-features = false }
fluent = { version = "0.16", optional = true }
http = "1.0"
intl-memoizer = { version = "0.5", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
tera = { version = "1.19", optional = true }
tower = "0.4"
unic-langid = { version = "0.9", features = ["serde", "unic-langid-macros"] }
